# dbt-autodoc

./: .env.example  .gitignore  README.md  dbt_autodoc.sh  dbt_project.yml  pyproject.toml
macros/: generate_descriptions.sql
macros/helpers/: infer_column_description.sql  infer_model_description.sql
src/dbt_autodoc/: __init__.py  cli.py  config.py  generator.py  heuristic.py  manifest.py  prompt.py  writer.py
src/dbt_autodoc/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
